--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /FactorioTransportBeltSimulator/factorio/data
-/FactorioTransportBeltSimulator/*.user
 /FactorioTransportBeltSimulator/obj
 /FactorioTransportBeltSimulator/bin
 /.vs
+*.map
+*.suo
+*.user
