--- a/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
+++ b/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
@@ -63,8 +63,12 @@
   <ItemGroup>
     <Content Include="factorio\data\base\graphics\terrain\tutorial-grid\hr-tutorial-grid1.png" />
     <Content Include="favicon.ico" />
+    <None Include="bundleconfig.json" />
     <None Include="ts\bundle-es5.js" />
     <Content Include="tsconfig.json" />
+    <Content Include="ts\bundle-es5.min.js">
+      <DependentUpon>bundle-es5.js</DependentUpon>
+    </Content>
     <Content Include="ts\bundle.js.map">
       <DependentUpon>bundle.js</DependentUpon>
     </Content>
@@ -88,6 +92,9 @@
     <Content Include="factorio\need_files.txt" />
     <Content Include="index.html" />
     <None Include="ts\bundle.js" />
+    <Content Include="ts\bundle.min.js">
+      <DependentUpon>bundle.js</DependentUpon>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
