--- a/FactorioTransportBeltSimulator/tsconfig.json
+++ b/FactorioTransportBeltSimulator/tsconfig.json
@@ -7,11 +7,11 @@
       //"./ts/def"
     ],
 
-    "target": "ES6",
-    "outFile": "./ts/bundle.js",
+    //"target": "ES6",
+    //"outFile": "./js/bundle.js",
 
-    //"target": "ES5",
-    //"outFile": "./ts/bundle-es5.js",
+    "target": "ES5",
+    "outFile": "./js/bundle-es5.js",
 
     "jsx": "react",
     "module": "None",
