--- a/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
+++ b/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <TypeScriptCompile Include="ts\display.ts" />
     <TypeScriptCompile Include="ts\sprites.ts" />
     <TypeScriptCompile Include="ts\tools.ts" />
     <TypeScriptCompile Include="ts\game.ts" />
