--- a/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
+++ b/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
@@ -102,6 +102,7 @@
     <TypeScriptCompile Include="ts\displayEntities.ts" />
     <TypeScriptCompile Include="ts\display.ts" />
     <TypeScriptCompile Include="ts\sprites.ts" />
+    <TypeScriptCompile Include="ts\map.ts" />
     <TypeScriptCompile Include="ts\tools.ts" />
     <TypeScriptCompile Include="ts\game.ts" />
   </ItemGroup>
