--- a/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
+++ b/FactorioTransportBeltSimulator/FactorioTransportBeltSimulator.csproj
@@ -80,6 +80,7 @@
       <DependentUpon>bundle-es5.js</DependentUpon>
     </Content>
     <Content Include="js\fallback.js" />
+    <Content Include="js\pako.min.js" />
     <Content Include="tsconfig.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -101,6 +102,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ts\displayEntities.ts" />
     <TypeScriptCompile Include="ts\display.ts" />
+    <TypeScriptCompile Include="ts\def\pako.d.ts" />
     <TypeScriptCompile Include="ts\sprites.ts" />
     <TypeScriptCompile Include="ts\map.ts" />
     <TypeScriptCompile Include="ts\tools.ts" />
